Added additional styles and formatting to html

--- a/index.html
+++ b/index.html
@@ -4,16 +4,44 @@
     <title>Athanasia Drivas</title>
 </head>
 
+<style>
+    html {
+        background-color: white;
+        display: flex;
+        justify-content: center;
+    }
+    
+    main {
+        background-color:white;
+        border: 15px solid fuchsia
+    }
+
+    section {
+        display: flex;
+        flex-direction:column;
+        align-items: center;
+    }
+
+        .bolden {
+            font-style:normal;
+            font-weight: bold;
+
+    }
+</style>
+
 <body> 
+    <main>
    <img src="Athanasia Drivas (2).jpg"/>
+   <section>
    <h1>My name is Athanasia Drivas</h1>
-    <p>I am a junior web developer in-training based in <em>Sydney Australia</em></p>
-    <ul>
+    <p>I am a junior web developer in-training <br> based in <em class= "bolden">Hunters Hill NSW Australia</em></p>
+        <ul>
         <li><span>💻</span><a href="https://github.com/aanasi-tara">Github</a></li>
         <li><span>👩‍💼</span><a href="https://.linkedin.com/in/athanasia-drivas-9b7706104/">LinkedIn</a></li>
-        <li><span>📧</span><a href="mailto:adrivas@live.com.au">Email</a></li>  
-    
-    </ul>
+        <li class="bolden"><span>📧</span><a href="mailto:adrivas@live.com.au">Email</a></li>  
+        </ul>
+    </section>
 
+    </main> 
 </body>
 </html>
